Updated utilization main screen files

--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -54,35 +54,46 @@
               {% endblock %}
 
               {% block secondary %}
-
+                
               {% endblock %}
 
               {% block primary %}
-                {% block search_by_keyword %}
-                  <form class="top-centered-content" method="get">
-                    <br>
-                    <p>キーワード検索</p>
-                    <div class="input-group search-input-group">
-                      <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('キーワード検索...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ keyword }}"/>
-                      <span class="input-group-btn">
-                        <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
-                      </span>
-                    </div>
-                    <br>
-                {% endblock %}
-                {% if c.userobj.sysadmin %}
-                  {% block select_status %}
-                    <span class="status-label"><p>ステータス</p></span>
-                    <input type="checkbox" id="waiting" name="waiting" value="False">
-                    <label for="waiting" class="normal-font-weight middle-vertical-aligned">承認待ち</label>
-                    <input class="spaced-left" type="checkbox" id="approval" name="approval" value="True">
-                    <label for="approval" class="normal-font-weight middle-vertical-aligned">承認済</label>
-                  </form>
-                  {% endblock %}
+                {% if ((h.show_search_bar() == True) or (h.show_status_selection() == True and c.userobj.sysadmin)) %}
+                  {% if h.show_search_bar() == True %}  
+                    {% block search_by_keyword %}
+                      <form class="top-centered-content" method="get">
+                        <br>
+                        <p>キーワード検索</p>
+                        <div class="input-group search-input-group">
+                          <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('キーワード検索...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ h.keep_keyword() }}"/>
+                          <span class="input-group-btn">
+                            <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
+                          </span>
+                        </div>
+                        <br>
+                      </form>
+                    {% endblock %}
+                  {% endif %}
+                  {% if h.show_status_selection() == True %}  
+                    {% if c.userobj.sysadmin %}
+                      {% block select_status %}
+                        <form class="section site-search top-centered-content">
+                        <span class="status-label"><p>ステータス</p></span>
+                        <input type="checkbox" id="waiting_for_approval" name="waiting_for_approval" value="waiting">
+                        <label for="waiting_for_approval" class="normal-font-weight middle-vertical-aligned">承認待ち</label>
+                        <input class="spaced-left" type="checkbox" id="approved" name="approved" value="approved">
+                        <label for="approved" class="normal-font-weight middle-vertical-aligned">承認済</label>
+                      </form>
+                      {% endblock %}
+                    {% endif %}
+                  {% endif %}
+                  <hr>
                 {% endif %}
-                <hr>
-                <p class="bottom-centered-content">検索結果：{{ utilizations|length }}件</p>
-                {% block result_table %}
+                {% if h.show_record_count() == True %} 
+                  <p class="bottom-centered-content">検索結果：{{ h.get_data_count() }}件</p>
+                {% endif %}
+                {% if h.show_record_table() == True %} 
+                  {% block result_table %}
                   <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content">
                     <tr class="table-header">
                       <th class="big-column">タイトル</th>
@@ -93,27 +104,33 @@
                         <th class="small-column">ステータス</th>
                       {% endif %}
                     </tr>
-                    {% for row in utilizations %}
-                    <tr>
-                      <td class="left-aligned-text"><a href="http://localhost:5000/dataset/{{ row.resource.package.name }}/resource/{{ row.resource_id }}">{{ row.title }}</a>
-                        <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
-                        <!-- ToDo -->
-                        <span class="spaced-left">10,000</span>
-                      </td>
-                      <td>{{ row.resource.package.name }}</td>
-                      <td>{{ row.resource.name }}</td>
-                      <td>{{ row.created.strftime('%Y/%m/%d') }}</td>
-                      {% if c.userobj.sysadmin %}
-                        {% if row.approval == True %}
-                          <td>承認済</td>
-                        {% else %}
-                          <td>承認待ち</td>
+                    {% if h.get_data_count() %}
+                      {% for row in h.get_data() %}
+                      <tr>
+                        <td class="left-aligned-text">{{ row.title }}
+                          {% if h.show_record_table_badge() == True %}
+                            <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
+                          {% endif %}
+                          {% if h.show_record_table_issue_resolution_count() == True %}
+                            <span class="spaced-left">10,000</span>
+                          {% endif %}
+                        </td>
+                        <td>【東京部】新型コロナ...</td>
+                        <td>陽性者</td>
+                        <td>2023/01/01</td>
+                        {% if c.userobj.sysadmin %}
+                          {% if row.approval == True %}
+                            <td>承認済</td>
+                          {% else %}
+                            <td>承認待ち</td>
+                          {% endif %}
                         {% endif %}
-                      {% endif %}
-                    </tr>
-                    {% endfor %}
+                      </tr>
+                      {% endfor %}
+                    {% endif %}
                   </table>
-                {% endblock %}
+                  {% endblock %}
+                {% endif %}
 
                 {#
                 The primary_content block can be used to add content to the page.
@@ -127,13 +144,12 @@
                   {% endblock %}
                 #}
                 {% block primary_content %}
-
+                    
                 {% endblock %}
               {% endblock %}
             </div>
           {% endblock %}
         </div>
-      </div>
     {% endblock -%}
 
     {#
