--- a/ckanext/feedback/assets/css/search.css
+++ b/ckanext/feedback/assets/css/search.css
@@ -3,7 +3,7 @@
 }
 
 .bottom-centered-content {
-  margin-left: auto;
+  margin-left: 5%;
   margin-right: auto;
   width: 90%
 }
@@ -77,7 +77,7 @@ label:after {
 }*/
 
 .top-centered-content {
-  margin-left: auto;
+  margin-left: 5%;
   margin-right: auto;
   width: 70%;
 }
