--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -56,8 +56,8 @@
             {% endblock %}
 
             {% block primary %}
-              {% if ((h.show_search_bar() == True) or (h.show_status_selection() == True and c.userobj.sysadmin)) %}
-                {% if h.show_search_bar() == True %}  
+              {% if ((h.show_search_bar(self) == True) or (h.show_status_selection(self) == True and c.userobj.sysadmin)) %}
+                {% if h.show_search_bar(self) == True %}  
                   {% block search_by_keyword %}
                     <form class="top-centered-content" method="get">
                       <br>
@@ -71,7 +71,7 @@
                       <br>
                   {% endblock %}
                 {% endif %}
-                {% if h.show_status_selection() == True %}  
+                {% if h.show_status_selection(self) == True %}  
                   {% if c.userobj.sysadmin %}
                     {% block select_status %}
                       <span class="status-label"><p>ステータス</p></span>
@@ -85,17 +85,17 @@
                 {% endif %}
                 <hr>
               {% endif %}
-              {% if h.show_record_count() == True %} 
+              {% if h.show_record_count(self) == True %} 
                 <p class="bottom-centered-content">検索結果：{{ h.get_data_count() }}件</p>
               {% endif %}
-              {% if h.show_record_table() == True %} 
+              {% if h.show_record_table(self) == True %} 
                 {% block result_table %}
                 <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content">
                   <tr class="table-header">
                     <th class="big-column">タイトル</th>
                     <th class="big-column">データセット</th>
                     <th class="medium-column">データリソース</th>
-                    <th class="small-column">更新日</th>
+                    <th class="small-column">登録日</th>
                     {% if c.userobj.sysadmin %}
                       <th class="small-column">ステータス</th>
                     {% endif %}
@@ -103,17 +103,17 @@
                   {% if h.get_data_count() %}
                     {% for row in h.get_data() %}
                     <tr>
-                      <td class="left-aligned-text">{{ row.title }}
-                        {% if h.show_record_table_badge() == True %}
+                      <td class="left-aligned-text"><a href="http://localhost:5000/dataset/{{ h.get_package_info(row.resource_id).name }}/resource/{{ row.resource_id }}">{{ row.title }}</a>
+                        {% if h.show_record_table_badge(self) == True %}
                           <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
                         {% endif %}
-                        {% if h.show_record_table_issue_resolution_count() == True %}
+                        {% if h.show_record_table_issue_resolution_count(self) == True %}
                           <span class="spaced-left">10,000</span>
                         {% endif %}
                       </td>
-                      <td>【東京部】新型コロナ...</td>
-                      <td>陽性者</td>
-                      <td>2023/01/01</td>
+                      <td>{{ h.get_package_info(row.resource_id).name }}</td>
+                      <td>{{ h.get_resource_info(row.resource_id).name }}</td>
+                      <td>{{ row.created.strftime('%Y/%m/%d') }}</td>
                       {% if c.userobj.sysadmin %}
                         {% if row.approval == True %}
                           <td>承認済</td>
