--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -107,17 +107,17 @@
                     {% if h.get_data()|length > 0 %}
                       {% for row in h.get_data() %}
                       <tr>
-                        <td class="left-aligned-text">{{ row.title }}
-                          {% if h.show_record_table_badge() == True %}
+                        <td class="left-aligned-text"><a href="http://localhost:5000/dataset/{{ row.package_name }}/resource/{{ row.resource_id }}">{{ row.title }}</a>
+                          {% if h.show_record_table_badge(self) == True %}
                             <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
                           {% endif %}
                           {% if h.show_record_table_issue_resolution_count() == True %}
                             <span class="spaced-left">10,000</span>
                           {% endif %}
                         </td>
-                        <td>【東京部】新型コロナ...</td>
-                        <td>陽性者</td>
-                        <td>2023/01/01</td>
+                        <td>{{ row.package_name }}</td>
+                        <td>{{ row.resource_name }}</td>
+                        <td>{{ row.created.strftime('%Y/%m/%d') }}</td>
                         {% if c.userobj.sysadmin %}
                           {% if row.approval == True %}
                             <td>承認済</td>
