Added ToDo comments to unimplemented functionality and removed dummy link URLs

--- a/ckanext/feedback/templates/package/snippets/resources_list.html
+++ b/ckanext/feedback/templates/package/snippets/resources_list.html
@@ -19,6 +19,7 @@
               {% set can_edit = h.check_access('package_update', {'id':pkg.id }) and not is_activity_archive %}
               {% for resource in resources %}
                 {% snippet 'package/snippets/resource_item.html', pkg=pkg, res=resource, can_edit=can_edit, is_activity_archive=is_activity_archive %}
+                <!-- ToDo -->
                 <div class="utilization-data">
                   <p>利活用数：</p>
                   <p>評価：
