--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -108,6 +108,7 @@
                           <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
                         {% endif %}
                         {% if h.show_record_table_issue_resolution_count(self) == True %}
+                          <!-- ToDo -->
                           <span class="spaced-left">10,000</span>
                         {% endif %}
                       </td>
