Added links to the dataset catalog and resource item pages that lead to the Utilization Search page

--- a/ckanext/feedback/templates/snippets/package_item.html
+++ b/ckanext/feedback/templates/snippets/package_item.html
@@ -63,13 +63,12 @@ Example:
           {% block resources_outer %}
             <ul class="dataset-resources list-unstyled">
               {% block resources_inner %}
-                {% asset 'feedback/feedback-tooltip-css' %}
+                {% for resource in h.dict_list_reduce(package.resources, 'format') %}
                 <li>
-                  {% for resource in h.dict_list_reduce(package.resources, 'format') %}
-                    <a href="{{ h.url_for(package.type ~ '.read', id=package.name) }}" class="label label-default" data-format="{{ resource.lower() }}">{{ resource }}</a>
-                  {% endfor %}
+                  <a href="{{ h.url_for(package.type ~ '.read', id=package.name) }}" class="label label-default" data-format="{{ resource.lower() }}">{{ resource }}</a>
                   <div class="utilization-data">
-                    <p>利活用数：</p>
+                    <!-- ToDo -->
+                    <p>利活用数：<a href="http://localhost:5000/utilization/search?package_name={{ package.name }}">数字</a></p>
                     <p>評価：
                       <img src="/images/rating_star.png" alt="rating star" width="16" height="16"/>
                       <img src="/images/rating_star.png" alt="rating star" width="16" height="16"/>
@@ -78,14 +77,8 @@ Example:
                       <img src="/images/empty_rating_star.png" alt="empty rating star" width="16" height="16"/>
                     </p>
                   </div>
-                  {% if h.is_enabled_downloads() %}
-                    <div class = "bubble">
-                      <i class="fa fa-arrow-circle-o-down"></i>
-                      {{ h.get_package_downloads(package.id) }}
-                      <div class="description">ダウンロード数</div>
-                    </div>
-                  {% endif %}
                 </li>
+                {% endfor %}
               {% endblock %}
             </ul>
           {% endblock %}
