Removed extra <p> tag from resource_list utilization count link

--- a/ckanext/feedback/templates/package/snippets/resources_list.html
+++ b/ckanext/feedback/templates/package/snippets/resources_list.html
@@ -21,7 +21,7 @@
                 {% snippet 'package/snippets/resource_item.html', pkg=pkg, res=resource, can_edit=can_edit, is_activity_archive=is_activity_archive %}
                 <!-- ToDo -->
                 <div class="utilization-data">
-                  <p>利活用数：<a href="http://localhost:5000/utilization/search?resource_name={{ resource.name }}"><p>数字</p></a></p>
+                  <p>利活用数：<a href="http://localhost:5000/utilization/search?resource_name={{ resource.name }}">数字</a></p>
                   <p>評価：
                     <img src="/images/rating_star.png" alt="rating star" width="16" height="16"/>
                     <img src="/images/rating_star.png" alt="rating star" width="16" height="16"/>
