--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -79,22 +79,21 @@
                       {% block select_status %}
                         <form class="section site-search top-centered-content">
                         <span class="status-label"><p>ステータス</p></span>
-                        <input type="checkbox" id="waiting_for_approval" name="waiting_for_approval" value="waiting">
+                        <input type="checkbox" id="waiting" name="waiting" onclick="filter()">
                         <label for="waiting_for_approval" class="normal-font-weight middle-vertical-aligned">承認待ち</label>
-                        <input class="spaced-left" type="checkbox" id="approved" name="approved" value="approved">
+                        <input class="spaced-left" type="checkbox" id="approval" name="approval" onclick="filter()">
                         <label for="approved" class="normal-font-weight middle-vertical-aligned">承認済</label>
                       {% endblock %}
                     {% endif %}
                   {% endif %}
-                  </form>
                   <hr>
                 {% endif %}
                 {% if h.show_record_count(self) == True %} 
-                  <p class="bottom-centered-content">検索結果：{{ h.get_data()|length }}件</p>
+                  <p class="bottom-centered-content" id="data-count">検索結果：{{ h.get_data()|length }}件</p>
                 {% endif %}
                 {% if h.show_record_table() == True %} 
                   {% block result_table %}
-                  <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content">
+                  <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="results-table">
                     <tr class="table-header">
                       <th class="big-column">タイトル</th>
                       <th class="big-column">データセット</th>
@@ -162,13 +161,14 @@
     {% endblock -%}
   {%- endblock -%}
 
-  {%- block scripts %}
-    {% asset 'base/main' %}
-    {% asset 'base/ckan' %}
-    {% if g.tracking_enabled %}
-      {% asset 'base/tracking' %}
-    {% endif %}
-    {{ super() }}
-  {% endblock -%}
+{%- block scripts %}
+  {% asset 'base/main' %}
+  {% asset 'base/ckan' %}
+  {% asset 'feedback/feedback-search-js' %}
+  {% if g.tracking_enabled %}
+    {% asset 'base/tracking' %}
+  {% endif %}
+  {{ super() }}
+{% endblock -%}
 
 {% endif %}
