--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -1,3 +1,5 @@
+{% if h.enable_utilizations(self) == True %}
+
 {% extends "page.html" %}
 
 {%- block page -%}
@@ -56,40 +58,31 @@
             {% endblock %}
 
             {% block primary %}
-              {% if ((h.show_search_bar(self) == True) or (h.show_status_selection(self) == True and c.userobj.sysadmin)) %}
-                {% if h.show_search_bar(self) == True %}  
-                  {% block search_by_keyword %}
-                    <form class="top-centered-content" method="get">
-                      <br>
-                      <p>キーワード検索</p>
-                      <div class="input-group search-input-group">
-                        <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('キーワード検索...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ h.keep_keyword() }}"/>
-                        <span class="input-group-btn">
-                          <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
-                        </span>
-                      </div>
-                      <br>
-                  {% endblock %}
-                {% endif %}
-                {% if h.show_status_selection(self) == True %}  
-                  {% if c.userobj.sysadmin %}
-                    {% block select_status %}
-                      <span class="status-label"><p>ステータス</p></span>
-                      <input type="checkbox" id="waiting" name="waiting" value="False">
-                      <label for="waiting_for_approval" class="normal-font-weight middle-vertical-aligned">承認待ち</label>
-                      <input class="spaced-left" type="checkbox" id="approval" name="approval" value="True">
-                      <label for="approved" class="normal-font-weight middle-vertical-aligned">承認済</label>
-                    </form>
-                    {% endblock %}
-                  {% endif %}
-                {% endif %}
-                <hr>
+              {% block search_by_keyword %}
+                <form class="top-centered-content" method="get">
+                  <br>
+                  <p>キーワード検索</p>
+                  <div class="input-group search-input-group">
+                    <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('キーワード検索...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ h.keep_keyword() }}"/>
+                    <span class="input-group-btn">
+                      <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
+                    </span>
+                  </div>
+                  <br>
+              {% endblock %}
+              {% if c.userobj.sysadmin %}
+                {% block select_status %}
+                  <span class="status-label"><p>ステータス</p></span>
+                  <input type="checkbox" id="waiting" name="waiting" value="False">
+                  <label for="waiting_for_approval" class="normal-font-weight middle-vertical-aligned">承認待ち</label>
+                  <input class="spaced-left" type="checkbox" id="approval" name="approval" value="True">
+                  <label for="approved" class="normal-font-weight middle-vertical-aligned">承認済</label>
+                </form>
+                {% endblock %}
               {% endif %}
-              {% if h.show_record_count(self) == True %} 
-                <p class="bottom-centered-content">検索結果：{{ h.get_utilizations_count() }}件</p>
-              {% endif %}
-              {% if h.show_record_table(self) == True %} 
-                {% block result_table %}
+              <hr>
+              <p class="bottom-centered-content">検索結果：{{ h.get_utilizations_count() }}件</p>
+              {% block result_table %}
                 <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content">
                   <tr class="table-header">
                     <th class="big-column">タイトル</th>
@@ -104,13 +97,9 @@
                     {% for row in h.get_utilizations() %}
                     <tr>
                       <td class="left-aligned-text"><a href="http://localhost:5000/dataset/{{ h.get_package_info(row.resource_id).name }}/resource/{{ row.resource_id }}">{{ row.title }}</a>
-                        {% if h.show_record_table_badge(self) == True %}
-                          <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
-                        {% endif %}
-                        {% if h.show_record_table_issue_resolution_count(self) == True %}
-                          <!-- ToDo -->
-                          <span class="spaced-left">10,000</span>
-                        {% endif %}
+                        <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
+                        <!-- ToDo -->
+                        <span class="spaced-left">10,000</span>
                       </td>
                       <td>{{ h.get_package_info(row.resource_id).name }}</td>
                       <td>{{ h.get_resource_info(row.resource_id).name }}</td>
@@ -126,8 +115,7 @@
                     {% endfor %}
                   {% endif %}
                 </table>
-                {% endblock %}
-              {% endif %}
+              {% endblock %}
 
               {#
               The primary_content block can be used to add content to the page.
@@ -168,3 +156,5 @@
   {% endif %}
   {{ super() }}
 {% endblock -%}
+
+{% endif %}
