--- a/ckanext/feedback/templates/package/resource_read.html
+++ b/ckanext/feedback/templates/package/resource_read.html
@@ -12,10 +12,12 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <th scope="row">{{ _('Download') }}</th>
-          <td>{{ h.get_resource_download_count(res.id) or _('0') }}</td>
-        </tr>
+        {% if h.show_resource_download(self) == True %}
+          <tr>
+            <th scope="row">{{ _('Download') }}</th>
+            <td>{{ h.get_resource_download_count(res.id) or _('0') }}</td>
+          </tr>
+        {% endif %}
         <tr>
           <th scope="row">{{ _('Data last updated') }}</th>
           <td>{{ h.render_datetime(res.last_modified) or h.render_datetime(res.created) or _('unknown') }}</td>
