--- a/ckanext/feedback/templates/package/snippets/resource_item.html
+++ b/ckanext/feedback/templates/package/snippets/resource_item.html
@@ -4,7 +4,9 @@
   <a class="heading" href="{{ url }}" title="{{ res.name or res.description }}">
     {{ h.resource_display_name(res) | truncate(50) }}<span class="format-label" property="dc:format" data-format="{{ res.format.lower() or 'data' }}">{{ h.get_translated(res, 'format') }}</span>
     {{ h.popular('views', res.tracking_summary.total, min=10) if res.tracking_summary }}
-    <i class="fa fa-arrow-circle-o-down"></i>
-    {{ h.get_resource_download_count(res.id) or _('0') }}
+    {% if h.show_resource_download(self) == True %}
+      <i class="fa fa-arrow-circle-o-down"></i>
+      {{ h.get_resource_download_count(res.id) or _('0') }}
+    {% endif %}
   </a>
   {% endblock %}
