--- a/ckanext/feedback/templates/snippets/package_item.html
+++ b/ckanext/feedback/templates/snippets/package_item.html
@@ -4,8 +4,10 @@
   {% for resource in h.dict_list_reduce(package.resources, 'format') %}
   <li>
     <a href="{{ h.url_for(package.type ~ '.read', id=package.name) }}" class="label label-default" data-format="{{ resource.lower() }}">{{ resource }}</a>
-    <i class="fa fa-arrow-circle-o-down"></i>
-    {{ h.get_package_download_count(package.id) or _('0') }}
+    {% if h.show_package_download(self) == True %}
+      <i class="fa fa-arrow-circle-o-down"></i>
+      {{ h.get_package_download_count(package.id) or _('0') }}
+    {% endif %}
   </li>
   {% endfor %}
 {% endblock %}
