--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -1,4 +1,4 @@
-{% if h.is_enabled_utilizations  %}
+{% if h.enable_utilizations(self) == True %}
 
   {% extends "page.html" %}
 
@@ -57,28 +57,38 @@
                 
               {% endblock %}
 
-              {% block primary %}
+            {#
+            The pre_primary block can be used to add content to before the
+            rendering of the main content columns of the page.
+            #}
+            {% block pre_primary %}
+            {% endblock %}
+
+            {% block secondary %}
+              
+            {% endblock %}
+
+            {% block primary %}
               {% block search_by_keyword %}
                 <form class="top-centered-content" method="get">
                   <br>
-                  {% if not transitioned %}
-                    <h4>キーワード検索</h4>
-                    <div class="input-group search-input-group">
-                      <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('キーワード検索...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ keyword }}"/>
-                      <span class="input-group-btn">
-                        <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
-                      </span>
-                    </div>
-                  {% endif %}
+                  <p>キーワード検索</p>
+                  <div class="input-group search-input-group">
+                    <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('キーワード検索...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ h.keep_keyword() }}"/>
+                    <span class="input-group-btn">
+                      <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
+                    </span>
+                  </div>
+                  <br>
               {% endblock %}
               {% if c.userobj.sysadmin %}
                 {% block select_status %}
-                  <span><h4>ステータス</h4>
-                  <input type="checkbox" id="waiting" name="waiting" onclick="filter()">
+                  <span class="status-label"><p>ステータス</p></span>
+                  <input type="checkbox" id="waiting" name="waiting" value="False">
                   <label for="waiting_for_approval" class="normal-font-weight middle-vertical-aligned">承認待ち</label>
-                  <input class="spaced-left" type="checkbox" id="approval" name="approval" onclick="filter()">
+                  <input class="spaced-left" type="checkbox" id="approval" name="approval" value="True">
                   <label for="approved" class="normal-font-weight middle-vertical-aligned">承認済</label>
-                  </span>
+                </form>
                 {% endblock %}
               {% endif %}
               </form>
@@ -100,11 +110,12 @@
                       <th class="small-column">ステータス</th>
                     {% endif %}
                   </tr>
-                  {% for row in utilizations %}
+                  {% if h.get_utilizations()|length > 0 %}
+                    {% for row in h.get_utilizations() %}
                     <tr>
-                      <td class="left-aligned-text"><a href="{{ h.url_for('utilization.details', utilization_id=row.id) }}">{{ row.title }}</a>
+                      <td class="left-aligned-text"><a href="http://localhost:5000/dataset/{{ row.package_name }}/resource/{{ row.resource_id }}">{{ row.title }}</a>
                         <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
-                        <!-- ToDo -->  
+                        <!-- ToDo -->
                         <span class="spaced-left">10,000</span>
                       </td>
                       <td>{{ row.package_name }}</td>
@@ -120,7 +131,6 @@
                     </tr>
                   {% endfor %}
                 </table>
-              {% endblock %}
               {% endblock %}
               {#
               The primary_content block can be used to add content to the page.
