--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -63,7 +63,7 @@
                   <br>
                   <p>キーワード検索</p>
                   <div class="input-group search-input-group">
-                    <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('キーワード検索...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ h.keep_keyword() }}"/>
+                    <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('キーワード検索...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ keyword }}"/>
                     <span class="input-group-btn">
                       <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
                     </span>
@@ -81,7 +81,7 @@
                 {% endblock %}
               {% endif %}
               <hr>
-              <p class="bottom-centered-content">検索結果：{{ h.get_utilizations_count() }}件</p>
+              <p class="bottom-centered-content">検索結果：{{ utilizations|length }}件</p>
               {% block result_table %}
                 <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content">
                   <tr class="table-header">
@@ -93,27 +93,25 @@
                       <th class="small-column">ステータス</th>
                     {% endif %}
                   </tr>
-                  {% if h.get_utilizations_count() %}
-                    {% for row in h.get_utilizations() %}
-                    <tr>
-                      <td class="left-aligned-text"><a href="http://localhost:5000/dataset/{{ h.get_package_info(row.resource_id).name }}/resource/{{ row.resource_id }}">{{ row.title }}</a>
-                        <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
-                        <!-- ToDo -->
-                        <span class="spaced-left">10,000</span>
-                      </td>
-                      <td>{{ h.get_package_info(row.resource_id).name }}</td>
-                      <td>{{ h.get_resource_info(row.resource_id).name }}</td>
-                      <td>{{ row.created.strftime('%Y/%m/%d') }}</td>
-                      {% if c.userobj.sysadmin %}
-                        {% if row.approval == True %}
-                          <td>承認済</td>
-                        {% else %}
-                          <td>承認待ち</td>
-                        {% endif %}
+                  {% for row in utilizations %}
+                  <tr>
+                    <td class="left-aligned-text"><a href="http://localhost:5000/dataset/{{ row.resource.package.name }}/resource/{{ row.resource_id }}">{{ row.title }}</a>
+                      <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
+                      <!-- ToDo -->
+                      <span class="spaced-left">10,000</span>
+                    </td>
+                    <td>{{ row.resource.package.name }}</td>
+                    <td>{{ row.resource.name }}</td>
+                    <td>{{ row.created.strftime('%Y/%m/%d') }}</td>
+                    {% if c.userobj.sysadmin %}
+                      {% if row.approval == True %}
+                        <td>承認済</td>
+                      {% else %}
+                        <td>承認待ち</td>
                       {% endif %}
-                    </tr>
-                    {% endfor %}
-                  {% endif %}
+                    {% endif %}
+                  </tr>
+                  {% endfor %}
                 </table>
               {% endblock %}
 
