--- a/ckanext/feedback/templates/package/resource_read.html
+++ b/ckanext/feedback/templates/package/resource_read.html
@@ -12,7 +12,7 @@
         </tr>
       </thead>
       <tbody>
-        {% if h.show_resource_download(self) == True %}
+        {% if h.show_resource_downloads(self) == True %}
           <tr>
             <th scope="row">{{ _('Download') }}</th>
             <td>{{ h.get_resource_downloads(res.id) or _('0') }}</td>
