Changed details.html to retrieve "description" from the database

--- a/ckanext/feedback/templates/utilization/details.html
+++ b/ckanext/feedback/templates/utilization/details.html
@@ -89,7 +89,7 @@
                   <br>
                 </table>
                 <p class="bold">利活用内容</p>
-                <p>サンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプル</p>
+                <p>{{ row.description }}</p>
                 <br>
                 <p class="bold">課題解決数</p>
                 <!-- ToDo -->
