--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -44,7 +44,7 @@
               </div>
             {% endblock %}
 
-            <div class="row wrapper{% block wrapper_class %}{% endblock %}{% if self.secondary()|trim == '' or c.action=='resource_read' %} no-nav{% endif %}" style="height: 1000px">
+            <div class="row wrapper{% block wrapper_class %}{% endblock %}{% if self.secondary()|trim == '' or c.action=='resource_read' %} no-nav{% endif %}">
 
               {#
               The pre_primary block can be used to add content to before the
@@ -58,94 +58,77 @@
               {% endblock %}
 
               {% block primary %}
-                {% if ((h.show_search_bar() == True) or (h.show_status_selection() == True and c.userobj.sysadmin)) %}
-                  {% if h.show_search_bar() == True %}  
-                    {% block search_by_keyword %}
-                      <form class="top-centered-content" method="get">
-                        <br>
-                        <p>キーワード検索</p>
-                        <div class="input-group search-input-group">
-                          <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('キーワード検索...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ h.keep_keyword() }}"/>
-                          <span class="input-group-btn">
-                            <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
-                          </span>
-                        </div>
-                        <br>
-                      </form>
-                    {% endblock %}
-                  {% endif %}
-                  {% if h.show_status_selection() == True %}  
+              {% block search_by_keyword %}
+                <form class="top-centered-content" method="get">
+                  <br>
+                  <p>キーワード検索</p>
+                  <div class="input-group search-input-group">
+                    <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('キーワード検索...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ keyword }}"/>
+                    <span class="input-group-btn">
+                      <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
+                    </span>
+                  </div>
+                  <br>
+              {% endblock %}
+              {% if c.userobj.sysadmin %}
+                {% block select_status %}
+                  <span class="status-label"><p>ステータス</p></span>
+                  <input type="checkbox" id="waiting" name="waiting" onclick="filter()">
+                  <label for="waiting_for_approval" class="normal-font-weight middle-vertical-aligned">承認待ち</label>
+                  <input class="spaced-left" type="checkbox" id="approval" name="approval" onclick="filter()">
+                  <label for="approved" class="normal-font-weight middle-vertical-aligned">承認済</label>
+                  </span>
+                {% endblock %}
+              {% endif %}
+              </form>
+              <hr>
+              <p class="bottom-centered-content" id="data-count">検索結果：{{ utilizations|length }}件</p>
+              {% block result_table %}
+                <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="results-table">
+                  <tr class="table-header">
+                    <th class="big-column">タイトル</th>
+                    <th class="big-column">データセット</th>
+                    <th class="medium-column">データリソース</th>
+                    <th class="small-column">登録日</th>
                     {% if c.userobj.sysadmin %}
-                      {% block select_status %}
-                        <span class="top-centered-content">
-                          <span class="status-label"><p>ステータス</p></span>
-                          <input type="checkbox" id="waiting" name="waiting" onclick="filter()">
-                          <label for="waiting_for_approval" class="normal-font-weight middle-vertical-aligned">承認待ち</label>
-                          <input class="spaced-left" type="checkbox" id="approval" name="approval" onclick="filter()">
-                          <label for="approved" class="normal-font-weight middle-vertical-aligned">承認済</label>
-                        </span>
-                      {% endblock %}
+                      <th class="small-column">ステータス</th>
                     {% endif %}
-                  {% endif %}
-                  <hr>
-                {% endif %}
-                {% if h.show_record_count(self) == True %} 
-                  <p class="bottom-centered-content" id="data-count">検索結果：{{ h.get_data()|length }}件</p>
-                {% endif %}
-                {% if h.show_record_table() == True %} 
-                  {% block result_table %}
-                  <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="results-table">
-                    <tr class="table-header">
-                      <th class="big-column">タイトル</th>
-                      <th class="big-column">データセット</th>
-                      <th class="medium-column">データリソース</th>
-                      <th class="small-column">登録日</th>
+                  </tr>
+                  {% for row in utilizations %}
+                    <tr>
+                      <td class="left-aligned-text"><a href="http://localhost:5000/dataset/{{ row.package_name }}/resource/{{ row.resource_id }}">{{ row.title }}</a>
+                        <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
+                        <!-- ToDo -->  
+                        <span class="spaced-left">10,000</span>
+                      </td>
+                      <td>{{ row.package_name }}</td>
+                      <td>{{ row.resource_name }}</td>
+                      <td>{{ row.created.strftime('%Y/%m/%d') }}</td>
                       {% if c.userobj.sysadmin %}
-                        <th class="small-column">ステータス</th>
+                        {% if row.approval == True %}
+                          <td>承認済</td>
+                        {% else %}
+                          <td>承認待ち</td>
+                        {% endif %}
                       {% endif %}
                     </tr>
-                    {% if h.get_data()|length > 0 %}
-                      {% for row in h.get_data() %}
-                      <tr>
-                        <td class="left-aligned-text"><a href="http://localhost:5000/dataset/{{ row.package_name }}/resource/{{ row.resource_id }}">{{ row.title }}</a>
-                          {% if h.show_record_table_badge(self) == True %}
-                            <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
-                          {% endif %}
-                          {% if h.show_record_table_issue_resolution_count() == True %}
-                            <span class="spaced-left">10,000</span>
-                          {% endif %}
-                        </td>
-                        <td>{{ row.package_name }}</td>
-                        <td>{{ row.resource_name }}</td>
-                        <td>{{ row.created.strftime('%Y/%m/%d') }}</td>
-                        {% if c.userobj.sysadmin %}
-                          {% if row.approval == True %}
-                            <td>承認済</td>
-                          {% else %}
-                            <td>承認待ち</td>
-                          {% endif %}
-                        {% endif %}
-                      </tr>
-                      {% endfor %}
-                    {% endif %}
-                  </table>
-                  {% endblock %}
-                {% endif %}
+                  {% endfor %}
+                </table>
+              {% endblock %}
+              {% endblock %}
+              {#
+              The primary_content block can be used to add content to the page.
+              This is the main block that is likely to be used within a template.
 
-                {#
-                The primary_content block can be used to add content to the page.
-                This is the main block that is likely to be used within a template.
+              Example:
 
-                Example:
-
-                  {% block primary_content %}
-                    <h1>My page content</h1>
-                    <p>Some content for the page</p>
-                  {% endblock %}
-                #}
                 {% block primary_content %}
-                    
+                  <h1>My page content</h1>
+                  <p>Some content for the page</p>
                 {% endblock %}
+              #}
+              {% block primary_content %}
+                    
               {% endblock %}
             </div>
           {% endblock %}
