--- a/ckanext/feedback/templates/header.html
+++ b/ckanext/feedback/templates/header.html
@@ -15,7 +15,7 @@
         <li>
           <a href="{{ h.url_for('user.read', id=c.userobj.name) }}" class="image" title="{{ _('View profile') }}">
             {{ h.user_image((c.user if c and c.user else ''), size=22) }}
-             <span class="username">{{ c.userobj.display_name }}</span>
+            <span class="username">{{ c.userobj.display_name }}</span>
           </a>
         </li>
         {% set new_activities = h.new_activities() %}
@@ -87,17 +87,17 @@
         <ul class="nav nav-pills">
           {% block header_site_navigation_tabs %}
             {% set menu_items = [] %}
-            {% do menu_items.append(('home.index', _('Top'))) %}
-            {% do menu_items.append(('dataset.search', _('Dataset'))) %}
-            {% do menu_items.append(('organization.index', _('Organization'))) %}
-            {% do menu_items.append(('group.index', _('Group'))) %}
+            {{ menu_items.append(('home.index', _('Top'))) or "" }}
+            {{ menu_items.append(('dataset.search', _('Dataset'))) or "" }}
+            {{ menu_items.append(('organization.index', _('Organization'))) or "" }}
+            {{ menu_items.append(('group.index', _('Group'))) or "" }}
             {% if h.is_enabled_utilizations %}
-              {% do menu_items.append(('utilization.search', _('利活用方法'))) %}
+              {{ menu_items.append(('utilization.search', _('利活用方法'))) or "" }}
             {% endif %}
             {% if c.userobj.sysadmin and h.is_enabled_resources %}
-              {% do menu_items.append(('home.about', _('フィードバック一覧'))) %}
+              {{ menu_items.append(('home.about', _('フィードバック一覧'))) or "" }}
             {% endif %}
-            {% do menu_items.append(('home.about', _('About'))) %}
+            {{ menu_items.append(('home.about', _('About'))) or "" }}
             {% for item in menu_items %}
               {{ h.build_nav_main(item)}}
             {% endfor %}
