--- a/ckanext/feedback/templates/snippets/package_item.html
+++ b/ckanext/feedback/templates/snippets/package_item.html
@@ -4,7 +4,7 @@
   {% for resource in h.dict_list_reduce(package.resources, 'format') %}
   <li>
     <a href="{{ h.url_for(package.type ~ '.read', id=package.name) }}" class="label label-default" data-format="{{ resource.lower() }}">{{ resource }}</a>
-    {% if h.show_package_downloads(self) == True %}
+    {% if h.enable_downloads %}
       <i class="fa fa-arrow-circle-o-down"></i>
       {{ h.get_package_downloads(package.id) or _('0') }}
     {% endif %}
