--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -1,6 +1,4 @@
-{% if h.enable_utilizations(self) == True %}
-
-  {% extends "page.html" %}
+{% extends "page.html" %}
 
   {%- block page -%}
 
@@ -69,17 +67,26 @@
             {% endblock %}
 
             {% block primary %}
-              {% block search_by_keyword %}
-                <form class="top-centered-content" method="get">
-                  <br>
-                  <p>キーワード検索</p>
-                  <div class="input-group search-input-group">
-                    <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('キーワード検索...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ h.keep_keyword() }}"/>
-                    <span class="input-group-btn">
-                      <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
-                    </span>
-                  </div>
-                  <br>
+            {% block search_by_keyword %}
+              <form class="top-centered-content" method="get">
+                <br>
+                <p>キーワード検索</p>
+                <div class="input-group search-input-group">
+                  <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('キーワード検索...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ keyword }}"/>
+                  <span class="input-group-btn">
+                    <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
+                  </span>
+                </div>
+                <br>
+            {% endblock %}
+            {% if c.userobj.sysadmin %}
+              {% block select_status %}
+                <span class="status-label"><p>ステータス</p></span>
+                <input type="checkbox" id="waiting" name="waiting" onclick="filter()">
+                <label for="waiting_for_approval" class="normal-font-weight middle-vertical-aligned">承認待ち</label>
+                <input class="spaced-left" type="checkbox" id="approval" name="approval" onclick="filter()">
+                <label for="approved" class="normal-font-weight middle-vertical-aligned">承認済</label>
+                </span>
               {% endblock %}
               {% if c.userobj.sysadmin %}
                 {% block select_status %}
@@ -107,48 +114,34 @@
                     <th class="medium-column">データリソース</th>
                     <th class="small-column">登録日</th>
                     {% if c.userobj.sysadmin %}
-                      <th class="small-column">ステータス</th>
+                      {% if row.approval == True %}
+                        <td>承認済</td>
+                      {% else %}
+                        <td>承認待ち</td>
+                      {% endif %}
                     {% endif %}
                   </tr>
-                  {% if h.get_utilizations()|length > 0 %}
-                    {% for row in h.get_utilizations() %}
-                    <tr>
-                      <td class="left-aligned-text"><a href="http://localhost:5000/dataset/{{ row.package_name }}/resource/{{ row.resource_id }}">{{ row.title }}</a>
-                        <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
-                        <!-- ToDo -->
-                        <span class="spaced-left">10,000</span>
-                      </td>
-                      <td>{{ row.package_name }}</td>
-                      <td>{{ row.resource_name }}</td>
-                      <td>{{ row.created.strftime('%Y/%m/%d') }}</td>
-                      {% if c.userobj.sysadmin %}
-                        {% if row.approval == True %}
-                          <td>承認済</td>
-                        {% else %}
-                          <td>承認待ち</td>
-                        {% endif %}
-                      {% endif %}
-                    </tr>
-                  {% endfor %}
-                </table>
-              {% endblock %}
-              {#
-              The primary_content block can be used to add content to the page.
-              This is the main block that is likely to be used within a template.
+                {% endfor %}
+              </table>
+            {% endblock %}
+            {% endblock %}
+            {#
+            The primary_content block can be used to add content to the page.
+            This is the main block that is likely to be used within a template.
 
-              Example:
+            Example:
 
-                {% block primary_content %}
-                  <h1>My page content</h1>
-                  <p>Some content for the page</p>
-                {% endblock %}
-              #}
               {% block primary_content %}
-                    
+                <h1>My page content</h1>
+                <p>Some content for the page</p>
               {% endblock %}
-            </div>
-          {% endblock %}
-        </div>
+            #}
+            {% block primary_content %}
+                  
+            {% endblock %}
+          </div>
+        {% endblock %}
+      </div>
     {% endblock -%}
 
     {#
@@ -170,4 +163,3 @@
     {% endif %}
     {{ super() }}
   {% endblock -%}
-{% endif %}
