Added config settings checks to html files

--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -1,3 +1,5 @@
+{% if h.enable_utilizations == true %}
+
 {% extends "page.html" %}
 
   {%- block page -%}
@@ -163,3 +165,4 @@
     {% endif %}
     {{ super() }}
   {% endblock -%}
+{% endif %}
