--- a/ckanext/feedback/templates/utilization/details.html
+++ b/ckanext/feedback/templates/utilization/details.html
@@ -58,13 +58,16 @@
             {% endblock %}
 
             {% block primary %}
-              {% set row = h.get_utilization_details() %}
-              <form class="centered-content" method="get">
+              {% set row = details %}
+              <div class="centered-content" method="get">
                 <br>
                 {% if c.userobj.sysadmin %}
                   <button class="btn btn-primary right-aligned spaced-left">編集</button>
                   <button class="btn btn-primary right-aligned">承認</button>
+                  <br>
+                  <hr>
                 {% endif %}
+                <h1>{{ row.title }}</h1>
                 <table class="table table-striped table-bordered table-condensed">
                   <thead>
                     <th scope="col" class="left-aligned-text">Field</th>
@@ -88,61 +91,54 @@
                   </tr>
                   <br>
                 </table>
-                <p class="bold">利活用内容</p>
+                <h4>利活用内容</h4>
                 <p>{{ row.description }}</p>
-                <br>
-                <p class="bold">課題解決数</p>
+                <hr>
+                <h4>課題解決数</h4>
                 <!-- ToDo -->
                 <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28">1
                 {% if c.userobj.sysadmin %}
                   <button class="btn btn-primary right-aligned">課題解決</button>
                 {% endif %}
                 <br>
-                <br>
-                <p class="bold">コメント数</p>
-                <p>1</p>
-                <br>
-                <p class="bold">コメント</p>
-                <select name="comment-type" id="comment-type">
-                  <option value="request">要望</option>
-                  <option value="inquiry">問合せ</option>
-                </select>
-                <br>
-                <br>
-                <textarea class="form-control" cols="20" rows="5"></textarea>
-                <br>
-                <button class="btn btn-primary right-aligned">コメント送信</button>
-                <br>
-                <br>
-                <br>
-                <p class="bold">2023/01/15 要望</p>
-                {% if c.userobj.sysadmin %}
-                  <button class="btn btn-primary right-aligned">承認</button>
-                {% endif %}
-                <br>
-                <br>
-                <p>サンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプル</p>
-                <br>
-                <br>
-                <p class="bold">2023/01/10 要望</p>
-                {% if c.userobj.sysadmin %}
-                  <button class="btn btn-primary right-aligned">承認</button>
-                {% endif %}
-                <br>
-                <br>
-                <p>サンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプル</p>
-                <br>
-                <br>
-                <p class="bold">2023/01/08 問合せ</p>
-                {% if c.userobj.sysadmin %}
-                  <button class="btn btn-primary right-aligned">承認</button>
-                {% endif %}
-                <br>
-                <br>
-                <p>サンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプルサンプル</p>
-                <br>
-                <br>
-              </form>
+                <hr>
+                <h4>コメント数</h4>
+                <p>{{ comments|length }}</p>
+                <hr>
+                <form name="comment_form">
+                  <input type="hidden" id="utilization_id" name="utilization_id" value="{{ utilization_id }}"/>
+                  <h4>コメント</h4>
+                  <select name="comment_type" id="comment_type">
+                    <option value="Request">要望</option>
+                    <option value="Question">問合せ</option>
+                  </select>
+                  <br>
+                  <br>
+                  <textarea class="form-control" cols="20" rows="5" id="comment_content" name="comment_content"></textarea>
+                  <br>
+                  <button class="btn btn-primary right-aligned">コメント送信</button>
+                  <br>
+                  <br>
+                  <br>
+                </form>
+                <hr class="divider">
+                <form name="approval_form">
+                  <input type="hidden" id="utilization_id" name="utilization_id" value="{{ utilization_id }}"/>
+                  <input type="hidden" id="approval_user" name="approval_user" value="{{ c.userobj.id }}"
+                  {% for comment in comments %}
+                    <span>
+                      {% if c.userobj.sysadmin and comment.approval == false %}
+                        <button class="btn btn-primary right-aligned" id="comment_id" name="comment_id" value="{{ comment.id }}">承認</button>
+                      {% endif %}
+                      <!-- ToDo -->
+                      <h4>{{ comment.created.strftime('%Y/%m/%d') }} 要望</h4>
+                    </span>
+                    <br>
+                    <p>{{ comment.content }}</p>
+                    <hr class="divider">
+                  {% endfor %}
+                </form>
+              </div>
             {% endblock %}
           </div>
         {% endblock %}
